--- a/tictactoe/assets/css/phone-default.css
+++ b/tictactoe/assets/css/phone-default.css
@@ -23,10 +23,12 @@ h1{
 	
 }
 .tictactoe{
-	
+	display: block;
 	margin:0 auto;
 }
 img.tictactoe{
+    display: block;
+	margin:0 auto;
 	width:50%;
 }
 .fighter{
@@ -44,6 +46,20 @@ button{
 	background-color:black;
 	margin-top:20px;
 }
+
+
+/* Big button
+    margin: 0 auto;
+    display: block;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    font-size: 26px;
+    background-color: cornflowerblue;
+    color: lightgray;
+    text-transform: uppercase;
+*/
 
 #loading-wrapper {
   position: fixed;
