--- a/tictactoe/assets/css/stripe.css
+++ b/tictactoe/assets/css/stripe.css
@@ -10,6 +10,13 @@
 
 }
 
+.stripBody img{
+    margin: 0 auto;
+    display: block;
+    border-radius: 50%;
+    width: 50%;
+}
+
 h1{
     text-align: center;
     margin-bottom: 0px;
