--- a/tictactoe/assets/css/public/currentGame.css
+++ b/tictactoe/assets/css/public/currentGame.css
@@ -7,8 +7,8 @@ span {
 }
 
 div.col2 {
-	border-left: 2px solid #000;
-	border-right: 2px solid #000;
+	border-left: 2px solid #fff;
+	border-right: 2px solid #fff;
 }
 
 div.row2 div {
