--- a/tictactoe/assets/css/phone-default.css
+++ b/tictactoe/assets/css/phone-default.css
@@ -8,6 +8,12 @@ body{
 	max-width:960px;
 	margin:0 auto;
 	text-align:center;
+	height:100vh;
+	background: #004e64; /* Old browsers */
+    background: -moz-linear-gradient(top, #004e64 0%, #25a18e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #004e64 0%,#25a18e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #004e64 0%,#25a18e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004e64', endColorstr='#25a18e',GradientType=0 ); /* IE6-9 */
 }
 .container{
 	padding-top:20px;
